--- a/wellness_checkup.html
+++ b/wellness_checkup.html
@@ -50,7 +50,7 @@
 	 welcome those just looking for a few healthy tips to make their food healthier. This is a three day workshop full of fun, new food and excitment. We will have guess
 	 cooks share some of their favorite recipes, cooking demonstrations, a raffle and also a booklet for you to take home.
 	</p>
-	<p class="grid_3"><a href="vegan_workshop.html">Event Details</a></p>
+	<p class="grid_3"><a href="#details">Event Details</a></p>
 	</section>
 	<section class="grid_12">
 	<h3>Department of Health Wellness Check up</h3>
@@ -59,7 +59,7 @@
 	“The Healthiest City in the U.S.”  The City of Chicago works with community partners, internal departments to promote health, prevent disease, reduce environmental 
 	hazards and insure access to health care for all Chicagoans.
 	</p>
-    <p class="grid_3"><a href="wellness_checkup.html">Event Details</a></p>
+    <p class="grid_3"><a href="#details">Event Details</a></p>
     </section>
 	<section class="grid_12">
 	<h3>5k Walk for Cancer</h3>
@@ -67,7 +67,7 @@
 	Derrick does not cook and usually eats at a restaurant daily. As an athletic and health conscious individual Derrick enjoys eating foods that 
 	are delicious and nutritious.  
 	</p>
-	<p class="grid_3"><a href="5k_walk.html">Event Details</a></p>
+	<p class="grid_3"><a href="#details">Event Details</a></p>
 	</section>
 	</article>
 	<section class="grid_12">
