--- a/contact.html
+++ b/contact.html
@@ -104,8 +104,8 @@ Sunday	12:00–7:00 p.m.
         <input type="checkbox" name="contact_phone" id="contact_phone">
         <p>I prefer to be contacted by phone</p>
         </div>
-        <div id="submit" class="grid_5">
-        <input type="submit" name="submit" value="send">
+        <div id="submit" class="grid_5 omega">
+        <input type="submit" name="submit" value="send" class="css3button">
         <div>
         </div>
 	  </p>
