--- a/contact.html
+++ b/contact.html
@@ -39,43 +39,19 @@
 		<p id="contact"><img src="images/yahs.jpg" alt="Yah's Cuisine"></p>
 		
 		<div id="hours" class="grid_6 alpha">
-		<nav>
 <ul>
-<li>
-Address: 2347 E 75th St
-</li>
-<li>
-  City: Chicago, IL 60649
-</li>
-<li>
-Hours: <br>
-</li>
-<li>
-  Monday	Closed
-</li>
-<li>
- Tuesday	12:00–7:00 p.m.
-</li>
-<li>
-Wednesday  12:00–7:00 p.m
-</li>
-<li>
-Thursday	12:00–7:00 p.m.
-</li>
-<li>
- Friday		12:00–7:00 p.m.
-</li>
-<li>
- Friday		12:00–7:00 p.m.
-</li>
-<li>
-Saturday	12:00–7:00 p.m.
-</li>
-<li>
-Sunday	12:00–7:00 p.m.
-</li>
+<li>Address: 2347 E 75th St</li>
+<li>City: Chicago, IL 60649</li>
+<li> Hours: <br></li>
+<li>Monday	Closed</li>
+<li>Tuesday	12:00–7:00 p.m.</li>
+<li>Wednesday  12:00–7:00 p.m </li>
+<li>Thursday	12:00–7:00 p.m.</li>
+<li>Friday		12:00–7:00 p.m.</li>
+<li>Friday		12:00–7:00 p.m.</li>
+<li>Saturday	12:00–7:00 p.m.</li>
+<li>Sunday	12:00–7:00 p.m.</li>
 </ul>
-</nav>
 </div>
  </section>
 	  	<section class="grid_6 omega">
