--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
         <p>I prefer to be contacted by phone</p>
         </div>
         <div id="submit" class="grid_5 omega">
-        <input type="submit" name="submit" value="send" class="css3button">
+        <input type="submit" name="submit" value="Submit" class="css3button">
         <div>
         </div>
 	  </p>
