Revert "form fields"
This reverts commit 6a5b5851abd56f66260b9d64f0d4f93305a2cd11.

--- a/contact.html
+++ b/contact.html
@@ -57,11 +57,11 @@
 	  	<section class="grid_6 omega">
 	  	<div id="form" class="grid_5 omega">
         <h3> Contact Form</h3>
-        <form action="mailto:me@yahscuisine.com" autocomplete="on"/>
-        First Name:<input class="name" type="text name="name_first"/>
-        Last Name:<input class="name" type="text name="name_last"/>
-        Phone Number:<input class="phone" type="text name="phone"/>
-        Email Address:<input class="email" type="text name="e-mail"/>
+        <form action="mailto:me@yahscuisine.com" autocomplete="on">
+        First Name:<input type="text name="name_first"><br>
+        Last Name:<input type="text name="name_last" id="name_last"><br>
+        Phone Number:<input type="text name="phone" id="phone"><br>
+        Email Address:<input type="text name="e-mail" id="email"><br>
         <div>
         <label for="regarding">Regarding</label>
         </div>
