--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 		</nav>	
 	</header>
 	<logo class="grid_12">
-	<a href="http://www.yahscuisine.com"><img src="images/Yahs_logo.png" width="433" height="240" alt="Yah's Cuisine Logo"></a>
+	<a href="http://www.yahscuisine.com"><img src="images/Yahs_logo.png" width="333" height="140" alt="Yah's Cuisine Logo"></a>
 	</logo>	
 	
 	<article class="grid_12 alpha" >
@@ -58,7 +58,7 @@
 	  	<div id="form" class="grid_5 omega">
         <h3> Contact Form</h3>
         <form action="mailto:me@yahscuisine.com" autocomplete="on">
-        First Name:<input type="text name="name_first"><br>
+        First Name:<input type="text name="name_first" id="first_name"><br>
         Last Name:<input type="text name="name_last" id="name_last"><br>
         Phone Number:<input type="text name="phone" id="phone"><br>
         Email Address:<input type="text name="e-mail" id="email"><br>
